Fix Burger menu and view on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -163,16 +163,16 @@ header{
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       background-color: rgba(0, 0, 0, 0.932);
       color: $color-primary;
-      height: 100vh;
       ul{
          display: flex;
          flex-direction: column;
          justify-content: space-around;
          align-items: center;
-         height: 100%;
+         height: 90%;
+         list-style-type: none;
          li{
             &::marker{
                content: '';
